--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node": "~0.4.7"
     },
     "dependencies": {
-        "strata": "0.4.4",
+        "strata": "~0.5.0",
         "markdown": "0.2.1",
         "ejs": "0.4.3"
     },
