--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node": "~0.4.7"
     },
     "dependencies": {
-        "strata": "~0.5.2",
+        "strata": "0.5.2",
         "ejs": "0.4.3"
     },
     "private": true
