--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node": "~0.4.7"
     },
     "dependencies": {
-        "strata": "0.5.8",
+        "strata": "https://github.com/mjijackson/strata/tarball/master",
         "ejs": "0.4.3"
     },
     "private": true
