--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "node": "~0.4.7"
     },
     "dependencies": {
-        "strata": "0.5.14",
-        "ejs": "0.4.3"
+        "strata": "0.6.0"
     },
     "private": true
 }
