--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "engines": {
         "node": "~0.4.7"
     },
+    "dependencies": {
+        "strata": "0.8.1",
+        "mustache": "0.3.1-dev"
+    },
     "private": true
 }
